[gd_scene format=3 uid="uid://wxb4le0tibcc"]

[ext_resource type="Script" uid="uid://bddwwm27tbgvt" path="res://src/pause/pause_menu.gd" id="1_ytbj3"]
[ext_resource type="PackedScene" uid="uid://dy6aot16krxbq" path="res://src/Settings/settings_menu.tscn" id="2_bvkbt"]
[ext_resource type="PackedScene" uid="uid://dbpln4nype1e" path="res://src/PlayerSave/save_manager.tscn" id="3_lfx4s"]

[node name="Pause_Menu" type="Control" unique_id=629147716]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 247.0
offset_top = 113.0
offset_right = -295.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytbj3")

[node name="GraphFrame" type="GraphFrame" parent="." unique_id=1390383097]
layout_mode = 0
offset_left = -59.0
offset_top = -51.0
offset_right = 157.0
offset_bottom = 206.0

[node name="MarginContainer" type="MarginContainer" parent="GraphFrame" unique_id=997763754]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GraphFrame/MarginContainer" unique_id=1930481117]
layout_mode = 2

[node name="Resume" type="Button" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=97146883]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=1681006556]
layout_mode = 2
text = "Options"

[node name="Save" type="Button" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=683204515]
layout_mode = 2
text = "Save Game"

[node name="Main Menu" type="Button" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=1468243789]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=150064037]
layout_mode = 2
text = "Quit Game"

[node name="quitConfirm" type="ConfirmationDialog" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=413569091]
title = "Truly Quit the Game?"
size = Vector2i(400, 100)
ok_button_text = "Yes"
cancel_button_text = "No"

[node name="mainConfirm" type="ConfirmationDialog" parent="GraphFrame/MarginContainer/VBoxContainer" unique_id=863318878]
title = "Return to the Main Menu?"
size = Vector2i(400, 100)

[node name="PAUSED" type="Label" parent="." unique_id=1687017117]
layout_mode = 0
offset_left = -23.0
offset_top = -36.0
offset_right = 124.0
offset_bottom = -7.0
text = "PAUSED"
horizontal_alignment = 1

[node name="Settings" parent="." unique_id=929892439 instance=ExtResource("2_bvkbt")]
visible = false
layout_mode = 1
offset_left = -130.146
offset_top = -69.033005
offset_right = -99.026
offset_bottom = -72.753006

[node name="SaveManager" parent="." unique_id=1151760500 instance=ExtResource("3_lfx4s")]

[connection signal="pressed" from="GraphFrame/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GraphFrame/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="GraphFrame/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="GraphFrame/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="GraphFrame/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="confirmed" from="GraphFrame/MarginContainer/VBoxContainer/quitConfirm" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="GraphFrame/MarginContainer/VBoxContainer/quitConfirm" to="." method="_on_quit_confirm_confirmed"]
[connection signal="confirmed" from="GraphFrame/MarginContainer/VBoxContainer/mainConfirm" to="." method="_on_main_confirm_confirmed"]
